--- a/Cimob/Views/Candidaturas/Create.cshtml
+++ b/Cimob/Views/Candidaturas/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Cimob.Models.Candidatura.Candidatura
-@inject SignInManager<ApplicationUser> SignInManager
+@inject SignInManager<Cimob.Models.Utilizadores.ApplicationUser> SignInManager
 
 @{
     ViewData["Title"] = "Create";
