--- a/Cimob/Views/Escolas/SearchEscolas.cshtml
+++ b/Cimob/Views/Escolas/SearchEscolas.cshtml
@@ -37,7 +37,7 @@
                     @Html.DisplayNameFor(model => model.Nome)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.url)
+                    @Html.DisplayNameFor(model => model.Url)
                 </th>
                 <th></th>
             </tr>
@@ -53,7 +53,7 @@
                             </td>
 
                             <td>
-                                <a href="@item.url">Visitar</a>
+                                <a href="@item.Url">Visitar</a>
                             </td>
                         </tr>
                     }
