--- a/Cimob/Views/PontoInteresses/ChooseItem.cshtml
+++ b/Cimob/Views/PontoInteresses/ChooseItem.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cimob.Models.PontoInteresse
+﻿@model Cimob.Models.PontosInteresse.PontoInteresse
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
