--- a/Cimob/wwwroot/css/site.css
+++ b/Cimob/wwwroot/css/site.css
@@ -1,7 +1,256 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-    font-family: Arial;
-    
+﻿
+.nav > li > a:hover,
+.nav > li > a:focus {
+    text-decoration: none;
+    background-color: #339966 !important;
 }
 
+body {
+    background-color: #ebebe0 !important;
+}
+
+th {
+    background-color: #669999;
+    border: 0.5px solid black;
+}
+
+thead,
+td,
+tr,
+tbody {
+    border: 0.5px solid black;
+}
+
+body,
+html {
+    width: 100%;
+    height: 100%;
+}
+/*1.HOME CSS*/
+/*1.1. Imagens no fundo*/
+.HomeImageDiv {
+    display: table;
+    width: 94%;
+    height: 48%;
+    margin-top: 4%;
+}
+
+.ImageHomeDiv {
+    display: table-cell;
+    cursor: pointer;
+}
+
+.ImageHome {
+    width: 190px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+    .ImageHome:hover {
+        opacity: 0.5;
+    }
+
+/*1.2.Google Widget  */
+#google_translate_element {
+    margin-top: 1%;
+    margin-left: 76.5%;
+}
+
+/*1.3. Titulo fontes*/
+#HomeTitleh1 {
+    font-family: Open Sans;
+    font-size: 50px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 26.4px;
+    margin-bottom: 7%;
+}
+
+#HomeTitleh4 {
+    font-family: Open Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 300;
+    line-height: 26.4px;
+}
+
+/*1.4. Dropdown Menu*/
+/*
+    DROPDOWN MENU
+*/
+.dropbtn {
+    background-color: #8c8c8c;
+    color: white;
+    padding: 13px;
+    font-size: 16px;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #bfbfbf;
+    min-width: 189px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+    .dropdown-content a {
+        color: #262626 !important;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+        .dropdown-content a:hover {
+            background-color: #339966
+        }
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #339966;
+}
+
+.DefaultPresentation {
+    display: table;
+}
+
+/*Menu Vertical CSS*/
+.vertical-menu {
+    width: 135px;
+    display: table-cell
+}
+
+    .vertical-menu a {
+        background-color: #eee;
+        color: black;
+        display: block;
+        padding: 12px;
+        text-decoration: none;
+    }
+
+        .vertical-menu a:hover {
+            background-color: #339966;
+        }
+
+        .vertical-menu a.active {
+            background-color: #4CAF50;
+            color: white;
+            cursor: default;
+        }
+
+label {
+    text-align: justify;
+    margin: 1%;
+}
+
+.SubMenu {
+    font-size: 13px;
+    margin-left: 12%;
+    border: 0.5px solid black;
+}
+
+.SubSubMenu {
+    margin-left: 20%;
+    font-size: 11px;
+    border: 0.5px solid black;
+}
+
+.SubSubMenuSelected {
+    background-color: #737373 !important;
+    margin-left: 20%;
+    font-size: 11px;
+    border: 0.5px solid black;
+}
+
+.SubMenuSelected {
+    background-color: #666666 !important;
+    font-size: 13px;
+    margin-left: 12%;
+    border: 0.5px solid black;
+}
+
+.descriptionText {
+    margin-left: 4%;
+    margin-right: 13%;
+    width: 84%;
+}
+
+.descriptionTextBoxIn {
+    background-color: rgba(255, 255, 255,0.5);
+    width: 98%;
+    display: inline-block;
+}
+
+.descriptionTextBoxOut {
+    background-color: rgba(89, 89, 89,0.3);
+    height: 247px;
+    width: 102%;
+    vertical-align: middle;
+    text-align: center;
+    display: table-cell;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    opacity: 1 !important;
+}
+
+/*CSS MENU principal*/
+.container {
+    width: 100% !important;
+    margin-right: 25%
+}
+
+#navContainer {
+    background-color: #8c8c8c;
+    margin-left: 14%;
+    width: 76%;
+    margin-right: 2%;
+    margin-top: -57px;
+}
+
+.navbar {
+    margin-bottom: 0px;
+    border-radius: 0px;
+    border: none;
+}
+
+    .navbar a {
+        color: white;
+        opacity: 1;
+    }
+
+    .navbar:hover {
+        color: white;
+    }
+
+    .navbar li a {
+        color: white;
+        opacity: 1;
+    }
+
+.active {
+    background-color: rgba(0,0,0,0.64) !important;
+}
+
+    .active a {
+        color: white;
+        opacity: 1;
+    }
