--- a/Cimob/Views/Account/Login.cshtml
+++ b/Cimob/Views/Account/Login.cshtml
@@ -3,62 +3,42 @@
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
 @model LoginModel
-@inject SignInManager<ApplicationUser> SignInManager
+@inject SignInManager<Cimob.Models.Utilizadores.ApplicationUser> SignInManager
 
 @{
     ViewData["Title"] = "Iniciar Sessão";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Iniciar Sessão</title>
-
-    <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/estiloLogin.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/estiloLogin.css" asp-append-version="true" />
-    </environment>
-</head>
-<body>
-    <img src="~/images/imagem.jpg" class="img" />
-    <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-        <hr />
-        <div asp-validation-summary="All" class="text-danger"></div>
-        <div class="col-md-4">
-            <input class="form-control" placeholder="Introduza o email" name="Email" type="text" size="10">
-
-
-            <input class="form-control" placeholder="Password" name="Password" type="password" value="">
-
-            <div class="checkbox">
-                <label><input asp-for="RememberMe" />Lembrar-me? </label>
-            </div>
-
-            <button type="submit" class="btn btn-default">Iniciar sessão</button>
+<div style="margin-left: 16%;">
+    <img src="/images/imagem.jpg" class="img">
+   
+    <form method="post" action="/Account/Login" novalidate="novalidate" style="margin-left: 21%;">
+       
+        <label>Por favor insira os seus dados:</label>
+        <div class="text-danger validation-summary-valid" data-valmsg-summary="true">
+            <ul>
+                <li style="display:none"></li>
+            </ul>
         </div>
-        <p>
-            <a asp-action="ForgotPassword">Esqueceu a palavra-passe?</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Criar conta</a>
+        <div style="display:table">
+            <div style="display:table-row; width:100%" class="col-md-4">
+                <input class="form-control" placeholder="Introduza o email" name="Email" size="10" type="text">
 
-
-
-        </p>
-
+                <input class="form-control" placeholder="Password" name="Password" value="" type="password">
+                <div class="checkbox">
+                    <label><input data-val="true" data-val-required="The Remember me? field is required." id="RememberMe" name="RememberMe" value="true" type="checkbox">Lembrar-me? </label>
+                </div>
+                <button type="submit" class="btn btn-default">Iniciar sessão</button>
+            </div>
+            <div style="display:table-row; width:100%">
+                <p>
+                    <a href="/Account/ForgotPassword">Esqueceu a palavra-passe?</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="/Account/Register">Criar conta</a>
+                </p>
+            </div>
+        </div>
+        <input name="__RequestVerificationToken" value="CfDJ8NauP8V6DqlNtySKG99FWyM5kOza6bxH9XNH3VWDYPk1Hcic8E7rJ06sfQTkND1DBKZi7MddOeqWA7IfWuBaQ5rhACWu5uVFcc9YUomNYxFGMqWNNrvtNVMCWmDBtuPIFoxdW49dmropIloELiPF-jA" type="hidden"><input name="RememberMe" value="false" type="hidden">
     </form>
 
-
-    @section Scripts {
-        @await Html.PartialAsync("_ValidationScriptsPartial")
-    }
-
-</body>
-</html>
+</div>
