--- a/Cimob/Views/Account/RegisterConfirmation.cshtml
+++ b/Cimob/Views/Account/RegisterConfirmation.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Confirmação";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2>Confirmação de Registo</h2>
 <p>
-    Por favor verifique o seu email.
+    Foi enviado um email para o endereço que nos fornceu. Por favor verifique o seu email.
 </p>
