--- a/Cimob/Views/Concursoes/Index.cshtml
+++ b/Cimob/Views/Concursoes/Index.cshtml
@@ -1,52 +1,88 @@
 ﻿@model IEnumerable<Cimob.Models.Candidatura.Concurso_Escola_Tipo>
-@inject SignInManager<ApplicationUser> SignInManager
-<h2>Informações sobre candidaturas abertas</h2>
+@inject SignInManager<Cimob.Models.Utilizadores.ApplicationUser> SignInManager
+<h2>Informação Concursos abertos</h2>
 
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Nome
-            </th>
-            <th>
-                Descrição
-            </th>
-            <th>
-                Tipo de Utilizador
-            </th>
-            <th>
-                Escola
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.concurso.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.concurso.Descricao)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TipoDeUser.nomeTipo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.escola.Nome)
-                </td>
-                <td>
-                    @if (SignInManager.IsSignedIn(User))
-                       {
-                       @if (ViewBag.Tipo == item.TipoDeUser.TipoDeUserId)
-                       {             
-                        <a asp-area="" asp-route-id="@item.concurso.ConcursoId" asp-controller="Candidaturas" asp-action="Create">Candidatar</a>
-                        }
-                       }
+<div class="DefaultPresentation">
+    <div class="vertical-menu">
+        <a href="#" class="active">Informação Sobre Concursos</a>
+        @if (ViewBag.Tipo == 1)
+    {
+        <a class="SubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="1">Para Alunos</a>
+        <a class="SubSubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="1">Abertos</a>
+        <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorTipo" asp-route-id="1">Por Tipos de Concurso</a>
+        <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorParceria" asp-route-id="1">Por Parcerias</a>
+        <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorPais" asp-route-id="1">Por Pais</a>
+        <a class="SubMenu" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="2">Para Docentes</a>
+}
+else
+{
+    <a class="SubMenu" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="1">Para Alunos</a>
+    <a class="SubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="2">Para Docentes</a>
+    <a class="SubSubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="2">Abertos</a>
+    <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorTipo" asp-route-id="2">Por Tipos de Concurso</a>
+    <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorParceria" asp-route-id="2">Por Parcerias</a>
+    <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorPais" asp-route-id="2">Por Pais</a>
 
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+}
+    </div>
+    
+
+    <div style="margin-left: 10%;">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        Nome
+                    </th>
+                    <th>
+                        Tipo de Concurso
+                    </th>
+                    <th>
+                        Tipo de Utilizador
+                    </th>
+                    <th>
+                        Escola
+                    </th>
+                    <th>
+                        Pais
+                    </th>
+                    <th>
+                        Prazo
+                    </th>
+                    <th>
+
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.concurso.Nome)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.concurso.TipoConcurso.Nome)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TipoDeUser.nomeTipo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.escola.Nome)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.escola.Pais)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.concurso.Prazo)
+                        </td>
+                        <td>
+                            <a asp-area="" asp-controller="Concursoes" asp-action="consultarDetalhe" asp-route-id="2">Consultar</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
