--- a/Cimob/Views/Manage/AlterarDados.cshtml
+++ b/Cimob/Views/Manage/AlterarDados.cshtml
@@ -1,41 +1,40 @@
 ﻿@model AlterarDadosModel
-@{
-    ViewData["Title"] = "Consultar e Aterar dados do perfil";
-    ViewData.AddActivePage(ManageNavPages.AlterarDados);
-}
+<div class="DefaultPresentation">
+    <div class="vertical-menu">
+        <a href="#" class="active">Gestão de conta</a>
+        <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="ConsultarDados">Consultar Dados</a>
+        <a class="SubMenuSelected" asp-area="" asp-controller="Manage" asp-action="AlterarDados">Alterar Dados</a>
+        <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="ChangePassword">Alterar Password</a>
+        <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="VerCandidaturasPendentes">Ver candidaturas Pendentes</a>
+    </div>
+    <div class="descriptionText">
 
-<h4>@ViewData["Title"]</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
-<div class="row">
-    <div class="col-md-6">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label>Nome do utilizador</label>
-                <input asp-for="Username" class="form-control" disabled />
+        <div class="row">
+            <div class="col-md-6">
+                <form method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label>Nome do utilizador</label>
+                        <input asp-for="Nome" class="form-control" disabled />
+                    </div>
+                    <div class="form-group">
+                        <select asp-for="EscolaId" class="form-control" asp-items="ViewBag.EscolaId"></select>
+                        <span asp-validation-for="EscolaId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <select asp-for="PaisId" class="form-control" asp-items="ViewBag.PaisId"></select>
+                        <span asp-validation-for="PaisId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <select asp-for="TipoDeUserId" class="form-control" asp-items="ViewBag.TipoDeUserId"></select>
+                        <span asp-validation-for="TipoDeUserId" class="text-danger"></span>
+                    </div>
+                    <button type="submit" class="btn btn-default">Guardar</button>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                @if (Model.IsEmailConfirmed)
-        {
-            <div class="input-group">
-                <input asp-for="Email" class="form-control" />
-                <span class="input-group-addon" aria-hidden="true"><span class="glyphicon glyphicon-ok text-success"></span></span>
-            </div>
-}
-else
-{
-        <input asp-for="Email" class="form-control" />
-        <button asp-action="SendVerificationEmail" class="btn btn-link">Send verification email</button>
-}
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-           
-            <button type="submit" class="btn btn-default">Guardar</button>
-        </form>
+        </div>
+        @section Scripts {
+            @await Html.PartialAsync("_ValidationScriptsPartial")
+        }
     </div>
 </div>
-
-@section Scripts {
-    @await Html.PartialAsync("_ValidationScriptsPartial")
-}
