--- a/Cimob/Views/Manage/ChangePassword.cshtml
+++ b/Cimob/Views/Manage/ChangePassword.cshtml
@@ -1,32 +1,37 @@
 ﻿@model ChangePasswordModel
-@{
-    ViewData["Title"] = "Alterar palavra-passe";
-    ViewData.AddActivePage(ManageNavPages.ChangePassword);
-}
+<div class="DefaultPresentation">
+    <div class="vertical-menu">
+        <a href="#" class="active">Gestão de conta</a>
+        <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="ConsultarDados">Consultar Dados</a>
+        <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="AlterarDados">Alterar Dados</a>
+        <a class="SubMenuSelected" asp-area="" asp-controller="Manage" asp-action="ChangePassword">Alterar Password</a>
+        <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="VerCandidaturasPendentes">Ver Candidaturas Pendentes</a>
+    </div>
+    <div class="descriptionText">
+        <h1>Ver Candidaturas Pendentes</h1>
 
-<h4>@ViewData["Title"]</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
-<div class="row">
-    <div class="col-md-6">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <input asp-for="OldPassword" class="form-control"  placeholder="Palavar-passe antiga"/>
-                <span asp-validation-for="OldPassword" class="text-danger"></span>
+        <div class="row">
+            <div class="col-md-6">
+                <form method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <input asp-for="OldPassword" class="form-control" placeholder="Palavar-passe antiga" />
+                        <span asp-validation-for="OldPassword" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input asp-for="NewPassword" class="form-control" placeholder="Nova palavra-passe" />
+                        <span asp-validation-for="NewPassword" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input asp-for="ConfirmPassword" class="form-control" placeholder=" Confirmar palavra-passe" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
+                    <button type="submit" class="btn btn-default">Alterar</button>
+                </form>
             </div>
-            <div class="form-group">
-                <input asp-for="NewPassword" class="form-control" placeholder="Nova palavra-passe"/>
-                <span asp-validation-for="NewPassword" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input asp-for="ConfirmPassword" class="form-control" placeholder=" Confirmar palavra-passe" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-default">Alterar</button>
-        </form>
+        </div>
+        @section Scripts {
+            @await Html.PartialAsync("_ValidationScriptsPartial")
+        }
     </div>
 </div>
-
-@section Scripts {
-    @await Html.PartialAsync("_ValidationScriptsPartial")
-}
