--- a/Cimob/Views/Manage/VerCandidaturasPendentes.cshtml
+++ b/Cimob/Views/Manage/VerCandidaturasPendentes.cshtml
@@ -1,37 +1,42 @@
 ﻿@model IEnumerable<Cimob.Models.Candidatura.ProcessoCandidatura>
+<div class="DefaultPresentation">
+    <div class="vertical-menu">
+        <a href="#" class="active">Gestão de conta</a>
+        <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="ConsultarDados">Consultar Dados</a>
+        <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="AlterarDados">Alterar Dados</a>
+        <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="ChangePassword">Alterar Password</a>
+        <a class="SubMenuSelected" asp-area="" asp-controller="Manage" asp-action="VerCandidaturasPendentes">Ver Candidaturas Pendentes</a>
+    </div>
+    <div class="descriptionText">
+        <h1>Ver Candidaturas Pendentes</h1>
+        <div style="margin: auto; width: auto;">
 
+            <div class="container" style="width: 800px; min-height: 400px; float: left;">
+                <div id="areaDeCaixaReserva">
+                    <div id="caixaLarga" style="width: 800px">
+                        @{ if (Model.Any())
+                        {
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            Escola
+                                        </th>
+                                        <th>
+                                            Estado Candidatura
+                                        </th>
+                                        <th>
+                                            Comentário
+                                        </th>
 
+                                        <th>
+                                            Acções
+                                        </th>
 
-
-<div style="margin: auto; width: auto;">
-    
-    <div class="container" style="width: 800px; min-height: 400px; float: left;">
-        <div id="areaDeCaixaReserva">
-            <div id="caixaLarga" style="width: 800px">
-                @{ if (Model.Any())
-                    {
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>
-                                        Escola
-                                    </th>
-                                    <th>
-                                        Estado Candidatura
-                                    </th>
-                                    <th>
-                                        Comentário
-                                    </th>
-                                    
-                                    <th>
-                                       Acções
-                                    </th>
-                                   
-                                </tr>
-                            </thead>
-                            <tbody>
-
-                                @foreach (var item in Model)
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
                                 {
                                     <tr>
                                         <td>
@@ -44,22 +49,22 @@
                                             @Html.DisplayFor(modelItem => item.candidatura.Comentarios)
                                         </td>
 
-                                       
                                         <td>
-                                            <a asp-action="Delete" asp-route-id="@item.candidatura.CandidaturaId" >Cancelar Candidatura</a>
+                                            <a asp-action="Delete" asp-route-id="@item.candidatura.CandidaturaId">Cancelar Candidatura</a>
                                         </td>
-                                        
+
                                     </tr>
 
-                                }
+                            }
 
-
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
                     }
-                  
-                }
-             
+
+                        }
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
