--- a/Cimob/Views/Regulamentoes/Index.cshtml
+++ b/Cimob/Views/Regulamentoes/Index.cshtml
@@ -16,7 +16,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Descricao)
+               Ola
             </th>
             <th></th>
         </tr>
@@ -26,7 +26,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Descricao)
+                  Ola
                 </td>
             </tr>
         }
