--- a/Cimob/Views/Account/Login.cshtml
+++ b/Cimob/Views/Account/Login.cshtml
@@ -5,40 +5,36 @@
 @model LoginModel
 @inject SignInManager<Cimob.Models.Utilizadores.ApplicationUser> SignInManager
 
-@{
-    ViewData["Title"] = "Iniciar Sessão";
-}
 
-<div style="margin-left: 16%;">
-    <img src="/images/imagem.jpg" class="img">
-   
-    <form method="post" action="/Account/Login" novalidate="novalidate" style="margin-left: 21%;">
-       
-        <label>Por favor insira os seus dados:</label>
-        <div class="text-danger validation-summary-valid" data-valmsg-summary="true">
-            <ul>
-                <li style="display:none"></li>
-            </ul>
-        </div>
-        <div style="display:table">
-            <div style="display:table-row; width:100%" class="col-md-4">
-                <input class="form-control" placeholder="Introduza o email" name="Email" size="10" type="text">
+    <img src="~/images/imagem.jpg" class="img" />
+    <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
+        <hr />
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <div class="col-md-4">
+            <input class="form-control" placeholder="Introduza o email" name="Email" type="text" size="10">
 
-                <input class="form-control" placeholder="Password" name="Password" value="" type="password">
-                <div class="checkbox">
-                    <label><input data-val="true" data-val-required="The Remember me? field is required." id="RememberMe" name="RememberMe" value="true" type="checkbox">Lembrar-me? </label>
-                </div>
-                <button type="submit" class="btn btn-default">Iniciar sessão</button>
+
+            <input class="form-control" placeholder="Password" name="Password" type="password" value="">
+
+            <div class="checkbox">
+                <label><input asp-for="RememberMe" />Lembrar-me? </label>
             </div>
-            <div style="display:table-row; width:100%">
-                <p>
-                    <a href="/Account/ForgotPassword">Esqueceu a palavra-passe?</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="/Account/Register">Criar conta</a>
-                </p>
-            </div>
+
+            <button type="submit" class="btn btn-default">Iniciar sessão</button>
         </div>
-        <input name="__RequestVerificationToken" value="CfDJ8NauP8V6DqlNtySKG99FWyM5kOza6bxH9XNH3VWDYPk1Hcic8E7rJ06sfQTkND1DBKZi7MddOeqWA7IfWuBaQ5rhACWu5uVFcc9YUomNYxFGMqWNNrvtNVMCWmDBtuPIFoxdW49dmropIloELiPF-jA" type="hidden"><input name="RememberMe" value="false" type="hidden">
+        <p>
+            <a asp-action="ForgotPassword">Esqueceu a palavra-passe?</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Criar conta</a>
+
+
+
+        </p>
+
     </form>
 
-</div>
+
+    @section Scripts {
+        @await Html.PartialAsync("_ValidationScriptsPartial")
+    }
+>
