--- a/Cimob/Views/Concursoes/consultarDetalhe.cshtml
+++ b/Cimob/Views/Concursoes/consultarDetalhe.cshtml
@@ -6,7 +6,7 @@
         <a class="SubMenuSelected" asp-area="" asp-controller="Home" asp-action="About">Detalhe Concurso</a>
         <a class="SubMenu" asp-area="" asp-controller="Home" asp-action="Team">Documentação</a>
         <a class="SubMenu" asp-area="" asp-controller="Home" asp-action="Team">Bolsas</a>
-        <a class="SubMenu" asp-area="" asp-controller="Candidaturas" asp-action="Create">Candidatar</a>
+        <a class="SubMenu" asp-area="" asp-controller="Candidaturas" asp-action="Create" asp-route-id=@Model.ConcursoId>Candidatar</a>
         <a class="SubMenu" asp-area="" asp-controller="Home" asp-action="Team">Ajuda</a>
     </div>
 
@@ -35,4 +35,5 @@
             </div>
         </div>
     </div>
+</div>
 
