--- a/Cimob/Views/Contactos/Create.cshtml
+++ b/Cimob/Views/Contactos/Create.cshtml
@@ -15,8 +15,8 @@
                     <script type="text/javascript">
                         Skype.ui({
                             "name": "dropdown",
-                            "element": "SkypeButton_Call_david_santos_12",
-                            "participants": ["carlusca.cunha"]
+                            "element": "SkypeButton_Call_Cimob",
+                            "participants": ["Cimob"]
                         });
                     </script>
                 </div>
