--- a/Cimob/Views/Concursoes/PorTipo.cshtml
+++ b/Cimob/Views/Concursoes/PorTipo.cshtml
@@ -9,7 +9,7 @@
         @if (ViewBag.Tipo == 1)
     {
         <a class="SubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="1">Para Alunos</a>
-        <a class="SubMenu" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="1">Abertos</a>
+        <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="1">Abertos</a>
         <a class="SubSubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="PorTipo" asp-route-id="1">Por Tipos de Concurso</a>
         <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorParceria" asp-route-id="1">Por Parcerias</a>
         <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorPais" asp-route-id="1">Por Pais</a>
