--- a/Cimob/Views/Concursoes/Index.cshtml
+++ b/Cimob/Views/Concursoes/Index.cshtml
@@ -28,7 +28,7 @@
     </div>
 
 
-        <table class="table">
+        <table class="table" style="margin-left:5%">
             <thead>
                 <tr>
                     <th>
