--- a/Cimob/Views/Contactos/Create.cshtml
+++ b/Cimob/Views/Contactos/Create.cshtml
@@ -15,7 +15,7 @@
                     <script type="text/javascript">
                         Skype.ui({
                             "name": "dropdown",
-                            "element": "SkypeButton_Call_Cimob",
+                            "element": "SkypeButton_Call_Cunha",
                             "participants": ["Cimob"]
                         });
                     </script>
