--- a/Cimob/Views/Candidaturas/Create.cshtml
+++ b/Cimob/Views/Candidaturas/Create.cshtml
@@ -34,6 +34,10 @@
                     <span asp-validation-for="Localidade" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <input asp-for="Morada" class="form-control" placeholder="Morada" />
+                    <span asp-validation-for="Morada" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <input asp-for="Telemovel" class="form-control" placeholder="Telemovel" />
                     <span asp-validation-for="Telemovel" class="text-danger"></span>
                 </div>
