--- a/Cimob/Views/Candidaturas/IndexAdministrador.cshtml
+++ b/Cimob/Views/Candidaturas/IndexAdministrador.cshtml
@@ -7,16 +7,7 @@
         <a class="SubMenu" asp-area="" asp-controller="Home" asp-action="Team">Ajuda</a>
     </div>
 
-    <div class="row">
-
-        <div style="margin: auto; width: auto;">
-
-            <div class="container" style="width: 800px; min-height: 400px; float: left;">
-                <div id="areaDeCaixaReserva">
-                    <div id="caixaLarga" style="width: 800px">
-                        @{ if (Model.Any())
-                            {
-                                <table class="table">
+                             <table class="table" style="margin-left:5%">
                                     <thead>
                                         <tr>
                                             <th>
@@ -60,13 +51,7 @@
 
                                     </tbody>
                                 </table>
-                            }
-
-                        }
+                        
 
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+              
