--- a/Cimob/Views/Entrevistas/Create.cshtml
+++ b/Cimob/Views/Entrevistas/Create.cshtml
@@ -19,11 +19,15 @@
                 <input asp-for="CandidaturaId" class="form-control" value=@Model.CandidaturaId>
             </div>
             <div class="form-group">
-                <label asp-for="HoraDia" class="control-label"></label>
-                <input asp-for="HoraDia" id="datetime" class="form-control" />
-                <span asp-validation-for="HoraDia" class="text-danger"></span>
+                <label asp-for="Data" class="control-label"></label>
+                <input asp-for="Data" type="date" class="form-control" value="" />
+                <span asp-validation-for="Data" class="text-danger"></span>
             </div>
-
+            <div class="form-group">
+                <label asp-for="Hora" class="control-label"></label>
+                <input asp-for="Hora" type="time" class="form-control" value="" />
+                <span asp-validation-for="Hora" class="text-danger"></span>
+            </div>           
             <div class="form-group">
                 <input type="submit" value="Criar Entrevista" class="btn btn-default" />
             </div>
